--- a/src/components/PizzaList/PizzaItem/PizzaItem.css
+++ b/src/components/PizzaList/PizzaItem/PizzaItem.css
@@ -4,10 +4,16 @@
 }
 
 .pizzaItem {
-    border: 2px solid black;
-    display: grid;
-    width: 500px;
+    border: 1px solid black;
+    box-shadow: 3px 1px 7px 3px rgba(0, 0, 0, 0.093);
+    display: inline-flex;
     margin: 5px;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 5fr 1fr;
+    flex-direction: column;
+    align-items: center;
+    width: 330px;
+    height: 350px;
+    justify-content: space-between;
+    padding: 10px;
 }
