--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -11,10 +11,12 @@
 #orderTable {
 	width:100%;
 	border:1px solid;
+	border-collapse: collapse;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
 #orderHead {
-	display:flex;
 	width:100%;
 	background:#000;
     color: white;
@@ -24,10 +26,50 @@
 .orderRow {
 	display:flex;
 	width:100%;
-	padding:(1.5) 0;
-
-	
 }
-.orderRow:nth-child(odd) {
+
+.orderRow:nth-child(2) {
     background: lightgrey
+}
+
+#total{
+	font-size: 30px;
+}
+
+.button {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: 13px 20px 13px;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button:after {
+  content: "";
+  background-color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.button:hover:after {
+  top: 0px;
+  left: 0px;
+}
+
+@media (min-width: 768px) {
+  .button {
+    padding: 13px 50px 13px;
+  }
 }
